--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mustache": "^2.3.0",
     "mustache-loader": "^0.4.1",
     "promise": "^7.1.1",
+    "wavefunctioncollapse": "^1.0.0",
     "webpack": "^2.3.2"
   }
 }
